# DSSG2024_transit_equity

./: .env.example  .gitignore  README.md  _config.yml  about.md  actionid IS NOT DISTINCT FROM waiting_lock.transactionid  analyses.md  background.md  check_tables.py  environment.yaml  ethics.md  index.md  low_income.md  motivation.md  networks.md  pyproject.toml  query_table.py  query_view.py  questions.md  results.md  stakeholders.md  tinct(blocking.pid) AS blocking_pid  transfer_hotspots.md  user_classification.md  waiting_lock ON waiting.pid = waiting_lock.pid
_includes/: sidebar.html
assets/img/: disability_centrality_no_downtown.html  disability_net_no_colorbar.html  disability_net_no_downtown.html  lift_centrality_no_downtown.html  lift_net_no_colorbar.html  lift_net_no_downtown.html  senior_centrality_no_downtown.html  senior_net_no_colorbar.html  senior_net_no_downtown.html  youth_centrality_no_downtown.html  youth_net_no_colorbar.html  youth_net_no_downtown.html
data_utils/: connect.py
public/css/: hyde.css
src/sql/: main.py
src/transit_equity/analysis/: __init__.py
src/transit_equity/analysis/low_income/: __init__.py  census_grouping.py  king_county_divisions.py  plot.py  summary.py  summary_by_census.py  summary_statistics.py
src/transit_equity/analysis/transfers/: transfer_counts.sql  transfer_hotspots.sql
src/transit_equity/census/: __init__.py  household_size.py  income.py  income_poverty_level.py  income_poverty_level_ratio.py  population.py  puget_sound.py  utils.py
src/transit_equity/classification/: __init__.py  check_query_helper.py  heuristic_class.py  heuristic_model.sql  plotting
src/transit_equity/geospatial/: __init__.py  centroids.py  format_conversions.py  hex_to_shapely.py
src/transit_equity/networks/: __init__.py  network_plotting.py  network_prep.py
src/transit_equity/orca/: __init__.py
src/transit_equity/orca/constants/: schema_tables.py  tables.py
src/transit_equity/orca/query/: __init__.py  transactions_with_locations.py
src/transit_equity/orca_ng/: __init__.py  schema_tables.py  tables.py
src/transit_equity/orca_ng/constants/: schema_tables.py  schemas.py  tables.py
src/transit_equity/orca_ng/query/: __init__.py  get_stop_location.py  transactions_with_locations.py
src/transit_equity/temporal_classification/: 04final_heuristic_classification.sql  06home_address_for_validation  Readme.md
src/transit_equity/utils/: __init__.py  connect.py  db_helpers.py
