# Choosing a build backend:
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transit_equity"
version = "0.0.0"
authors = [
    {name = "Himanshu Naidu", email = "hnaidu36@uw.edu"},
    {name = "Rebecca Hayes", email = "<email>"},
    {name = "Siman Ning", email = "<email>"},
    {name = "Ishan Saksena", email = "<email>"},
    {name = "Bryna Hazelton", email = "brynah@phys.washington.edu"},
    {name = "Ryan Avery", email = "<email>"}
]
description = "Python Package for Transit Equity on ORCA Fare Card Data"
readme = "README.md"
dependencies = [
    "numpy>=2.0.0",
    "pandas">="2.2.2"
    "matplotlib>=3.8.4",
    "pgcli>=4.1.0",
    "psycopg2>=2.9.9",
    "scipy>=1.13.1",
    "sqlalchemy>=2.0.30",
    "python-dotenv">=1.0.1,
    "setuptools>=70"
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest"]
doc = ["sphinx"]

[project.urls]
Repository = "https://github.com/uwescience/DSSG2024_transit_equity"